--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         variables: [
                             {
                                 name: "IP",
-                                variable: "{event_message}",
+                                variable: "IP",
                                 value: "${userIP}"
                             }
                         ]
