--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <script>
         const webhookURL = "https://discord.com/api/webhooks/1305558117420892241/X3TC44x8aZrxgYD71reZpHIZThzShBhBRhiet7w6K6Uq7oQya9xcGPaPdm3KIC4AZh2K";
-        const proxy = "https://cors-anywhere.herokuapp.com/";
+        const proxy = "https://corsproxy.io/";
         const apiUrl = "https://api.botghost.com/webhook/1151241118403534958/0t2nh2769i3bdja5axve7b";
 
         function checkIP() {
