--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         ]
                     };
 
-                    fetch(proxy + apiUrl, {
+                    fetch(apiUrl, {
                         method: "POST",
                         headers: {
                             "Authorization": "bd8f5e61c5b98e12773f211488437e25f753c9139c32103c0bcce6f2bf9223f9",
