--- a/index.html
+++ b/index.html
@@ -3,6 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title>Vérification d'IP</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: black;
+        }
+        #container {
+            text-align: center;
+            padding: 20px;
+            border: 1px solid #ddd;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 300px;
+        }
+        h1 {
+            font-size: 20px;
+            color: #333;
+        }
+        #result {
+            margin-top: 15px;
+            font-size: 14px;
+            color: #555;
+        }
+    </style>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             // Extraire l'identifiant utilisateur de l'URL
