--- a/index.html
+++ b/index.html
@@ -81,8 +81,10 @@
                                     name: "message",
                                     variable: "{event_message}",
                                     value: "HELLO from webhooks"
-                                }]}
-                            )})
+                                }]
+                            }),
+                            credentials: "omit"
+                        })
                     .then(response => response.json())
                     .then(data => {
                         console.log("Réponse de BotGhost:", data);
