--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                                     value: "HELLO from webhooks"
                                 }]
                             }),
-                            credentials: "false"
+                            credentials: "same-origin"
                         })
                     .then(response => response.json())
                     .then(data => {
