--- a/index.html
+++ b/index.html
@@ -72,8 +72,9 @@
                             method: "POST",
                             headers: {
                                 "Authorization": "bd8f5e61c5b98e12773f211488437e25f753c9139c32103c0bcce6f2bf9223f9",
+                                 "Content-Type": "application/json"
                             },
-                            body: JSON.stringify({
+                            data: JSON.stringify({
                                 "variable": [{
                                     name: "message",
                                     variable: "{event_message}",
