--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
                         });
 
                         // Envoi à l'API IFTTT
-                        fetch("https://maker.ifttt.com/trigger/verif_ip/with/key/k561mQVsGFN5fqqkar4n0eq0EHBYkRn4iC9ciBSp2Mc", {
+                        fetch("http://localhost:3000/proxy", {
                             method: "POST",
-                            mode: "no-cors",
                             headers: {
                                 "Content-Type": "application/json"
                             },
